css/main.css
/*************************************************
BASE STYLES
*************************************************/

html {
  box-sizing: border-box;
  font-size: 62.5%; /* 1rem = 10px */
}

*, *:after, *:before {
  box-sizing: border-box;
}

body {
  line-height: 1.5;
  font-family: 'Roboto', sans-serif;
  background-color: #222;
  color: #222;
  margin: 0;
}

a {
  color: #222;
  text-decoration: none;
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

/*************************************************
CONTAINER
*************************************************/

.container {
  max-width: 940px;
  height: 100vh;
  background-color: white;
  margin: 0 auto;
  padding: 32px;

}

/*************************************************
NAVBAR
*************************************************/

.navbar {
  padding: 24px;
  text-align: center;
  border-bottom: 1px solid #999;
  margin-bottom: 64px;
}

input[type=submit] {
  border: none;
  border-bottom: 1px solid #111;
  background-color: #fff;
  color: #111;
  font-size: 1.75rem;
  margin: 0 16px 32px;


}

input[type=submit]:hover {
  color: #24B67F;
  border-color: #24B67F;
  cursor: pointer;
}

/*************************************************
MAIN CONTENT
*************************************************/

.mainContent {
  text-align: center;
  height: auto;
}

.playerWrapper {
  margin-bottom: 56px;
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 35px;
  height: 0;
  overflow: hidden;
}

.videoDescription {
  font-size: 1.9rem;
  font-weight: 300;
  text-align: justify;
}

/*iframe {
  position: absolute;
  top:0;
  left: 0;
  width: 100%;
  height: 100%;
}*/

/*************************************************
MEDIA QUERIES
*************************************************/
@media screen and (max-width: 420px) {

  .videoDescription {
    font-size: 1.75rem;
  }
}

@media screen and (max-width: 896px) {
  .navbar {
    padding: 16px;
  }
  input[type=submit] {
    display: block;
    margin: 24px auto;
  }

}

